# usbdetect

./: Makefile.am  configure.ac
lib/: dhcpc.c  dhcpc.h  libinotify.c  libinotify.h
main/: arc_tetheringd.c  main_dhcp_catcher.c
