
AC_INIT([arc_tetheringd], [1.0])
AC_CONFIG_AUX_DIR([build-aux])

# AutoMake
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects])
AM_PROG_CC_C_O
m4_ifdef([AM_PROG_AR], [AM_PROG_AR])

# LibTool
LT_INIT
LT_PREREQ([2.4])

AC_PROG_CC_STDC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

